# Disaloud

./: .gitignore  README.md  config.toml  pyproject.toml  run.bat
config/: config.toml
disaloud/: __init__.py  __main__.py  audio.py  bot.py  config.py  logger.py  util.py
disaloud/cogs/: basic.py  tts.py
disaloud/cogs/tts/: base.py  global_pipe.py
